# badmintellect

./: .gitignore  .oxfmtrc.json  README.md  app.py  com_handler.py  db.py  enr_handler.py  index.sql  init.py  package-lock.json  package.json  pyproject.toml  readme.md  res_handler.py  schema.sql  tag_handler.py  usr_handler.py
src/badmintellect/: app.py  com_handler.py  db.py  enr_handler.py  init.py  init.sql  res_handler.py  tag_handler.py  usr_handler.py
src/badmintellect/static/style/: change-profile-picture.css  edit-reservation.css  index.css  layout.css  login.css  new-reservation.css  register.css  remove-reservation.css  reservation-list.css  reservation.css  search.css  user.css
src/badmintellect/templates/: change-profile-picture.html  edit-reservation.html  index.html  layout.html  login.html  new-reservation.html  register.html  remove-reservation.html  reservation-list.html  reservation.html  search.html  user.html
static/style/: change-profile-picture.css  index.css  login.css  register.css  reservation-list.css  search.css
templates/: add-image.html  edit-reservation.html  edit.html  index.html  login.html  new-reservation.html  register.html  remove-reservation.html  remove.html  reservation.html  search.html  user.html
